force-app/main/default/objects/Opportunity/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Loại tiền tệ cho trường amount ở trên.</description>
    <label>Currency</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>