force-app/main/default/objects/Opportunity/fields/Customer_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Customer_Concerns__c</fullName>
    <description>Lo ngại của khách hàng.</description>
    <inlineHelpText>Lo ngại của khách hàng.</inlineHelpText>
    <label>Customer Concerns</label>
    <type>TextArea</type>
</CustomField>