force-app/main/default/objects/Opportunity/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <label>Customer Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>