force-app/main/default/objects/Opportunity/fields/Customer_Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Customer_Responsible_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Responsible Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Customer Responsible Employee)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>