force-app/main/default/objects/Opportunity/fields/Delivery_Model__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Model__c</fullName>
    <description>Mô hình triển khai.</description>
    <inlineHelpText>Mô hình triển khai.</inlineHelpText>
    <label>Delivery Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshore (Vietnam-Based)</fullName>
            </value>
            <value>
                <fullName>Onsite (Japan-Based)</fullName>
            </value>
            <value>
                <fullName>Onsite (Vietnam-Based)</fullName>
            </value>
            <value>
                <fullName>Hybrid (VN-JP Collaboration)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>