force-app/main/default/objects/Opportunity/fields/Estimated_Apis__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Apis__c</fullName>
    <description>Số API ước tính (số nguyên đại diện số lượng API).</description>
    <inlineHelpText>Số API ước tính (số nguyên đại diện số lượng API).</inlineHelpText>
    <label>Estimated Apis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>