force-app/main/default/objects/Opportunity/fields/Estimated_Screens__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Screens__c</fullName>
    <description>Số màn hình ước tính (số nguyên đại diện số lượng màn hình).</description>
    <inlineHelpText>Số màn hình ước tính (số nguyên đại diện số lượng màn hình).</inlineHelpText>
    <label>Estimated Screens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>