force-app/main/default/objects/Opportunity/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <description>Ngày kết thúc dự kiến của dự án.</description>
    <inlineHelpText>Ngày kết thúc dự kiến của dự án.</inlineHelpText>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>