force-app/main/default/objects/Opportunity/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>Ngày bắt đầu dự kiến của dự án.</description>
    <inlineHelpText>Ngày bắt đầu dự kiến của dự án.</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>