force-app/main/default/objects/Opportunity/fields/Feature_Categories__c.field-meta.xml
<CustomField>
    <fullName>Feature_Categories__c</fullName>
    <description>Danh mục tính năng (array of text strings).</description>
    <inlineHelpText>Danh mục tính năng (array of text strings).</inlineHelpText>
    <label>Feature Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>