force-app/main/default/objects/Opportunity/fields/Has_Requirement_Document__c.field-meta.xml
<CustomField>
    <fullName>Has_Requirement_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Có tài liệu yêu cầu không.</description>
    <inlineHelpText>Có tài liệu yêu cầu không.</inlineHelpText>
    <label>Has Requirement Document</label>
    <type>Checkbox</type>
</CustomField>