force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Ngành nghề.</description>
    <inlineHelpText>Ngành nghề.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>E-Commerce/Retail</fullName>
            </value>
            <value>
                <fullName>Finance/Banking</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Logistics/Transport</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>