force-app/main/default/objects/Opportunity/fields/Industry_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Industry_From_Account__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry (From Account)</label>
    <type>Text</type>
</CustomField>