force-app/main/default/objects/Opportunity/fields/Last_Submitted_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitted_To_Customer__c</fullName>
    <label>Last Submitted To Customer</label>
    <type>DateTime</type>
</CustomField>