force-app/main/default/objects/Opportunity/fields/Need_Rework__c.field-meta.xml
<CustomField>
    <fullName>Need_Rework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Rework</label>
    <type>Checkbox</type>
</CustomField>