force-app/main/default/objects/Opportunity/fields/Need_Technical_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Need_Technical_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Có cần nộp đề xuất kĩ thuật cho khách hàng không.</description>
    <inlineHelpText>Có cần nộp kĩ thuật cho khách hàng không.</inlineHelpText>
    <label>Need Technical Proposal</label>
    <type>Checkbox</type>
</CustomField>