force-app/main/default/objects/Opportunity/fields/Previous_Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Previous_Responsible_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Responsible Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Previous Responsible Employee)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>