force-app/main/default/objects/Opportunity/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <description>Loại mô hình báo giá.</description>
    <inlineHelpText>Loại mô hình báo giá.</inlineHelpText>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>SES Labo</fullName>
            </value>
            <value>
                <fullName>SES onsite</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>