force-app/main/default/objects/Opportunity/fields/Quick_Note__c.field-meta.xml
<CustomField>
    <fullName>Quick_Note__c</fullName>
    <description>Dùng để ghi note.</description>
    <inlineHelpText>Dùng để ghi note.</inlineHelpText>
    <label>Quick Note</label>
    <type>TextArea</type>
</CustomField>