force-app/main/default/objects/Opportunity/fields/Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>