force-app/main/default/objects/Opportunity/fields/Risk_Categories__c.field-meta.xml
<CustomField>
    <fullName>Risk_Categories__c</fullName>
    <description>Danh mục rủi ro (array of text strings).</description>
    <inlineHelpText>Danh mục rủi ro (array of text strings).</inlineHelpText>
    <label>Risk Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>