force-app/main/default/objects/Opportunity/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Yêu cầu tổng quan từ khách hàng (array of text strings).</description>
    <label>Short Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>