force-app/main/default/objects/Opportunity/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>