force-app/main/default/objects/Opportunity/fields/Team_Size_Expected__c.field-meta.xml
<CustomField>
    <fullName>Team_Size_Expected__c</fullName>
    <description>Kích thước đội ngũ dự kiến (số nguyên đại diện số người đội ngũ).</description>
    <inlineHelpText>Kích thước đội ngũ dự kiến (số nguyên đại diện số người đội ngũ).</inlineHelpText>
    <label>Team Size Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>