force-app/main/default/objects/Opportunity/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>Công nghệ sử dụng (array of text strings).</description>
    <label>Tech Stack</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>