force-app/main/default/objects/Opportunity/fields/Tender_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Tender_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender Responsible Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Tender Responsible Employee)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>