force-app/main/default/objects/Opportunity/fields/Win_Lose_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Win_Lose_Reason_Details__c</fullName>
    <description>Chi tiết lý do win/lose.</description>
    <inlineHelpText>Chi tiết lý do win/lose.</inlineHelpText>
    <label>Win/Lose Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>