force-app/main/default/objects/Opportunity/fields/Win_Lose_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Win_Lose_Reason_Type__c</fullName>
    <description>Phân loại lý do win/lose.</description>
    <inlineHelpText>Phân loại lý do win/lose.</inlineHelpText>
    <label>Win/Lose Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High price</fullName>
            </value>
            <value>
                <fullName>Skill Inefficiency</fullName>
            </value>
            <value>
                <fullName>End User Cancellation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>