force-app/main/default/objects/Opportunity/fields/Win_Lose_Reason_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Win_Lose_Reason_Type_Other__c</fullName>
    <description>Lý do win/lose khác các loại đã ghi (array of text strings).</description>
    <inlineHelpText>Lý do win/lose khác các loại đã ghi (array of text strings).</inlineHelpText>
    <label>Win/Lose Reason (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>