force-app/main/default/objects/Opportunity/listViews/Accepted_List.listView-meta.xml
<ListView>
    <fullName>Accepted_List</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Responsible_Employee__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Dev Manager Accept</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Dev Leader Accept</value>
    </filters>
    <label>Danh sách đã tiếp nhận</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>