force-app/main/default/objects/Opportunity/listViews/C_p_nh_t_t_i_li_u_cho_c_h_i.listView-meta.xml
<ListView>
    <fullName>C_p_nh_t_t_i_li_u_cho_c_h_i</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assigned to Dev Leader</value>
    </filters>
    <label>Cập nhật tài liệu cho cơ hội</label>
</ListView>