force-app/main/default/objects/Opportunity/listViews/ClosureOpportunity.listView-meta.xml
<ListView>
    <fullName>ClosureOpportunity</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>SalesTeam</filterScope>
    <label>Cơ Hội Đã Kết Thúc</label>
</ListView>