force-app/main/default/objects/Opportunity/listViews/Customer_Review.listView-meta.xml
<ListView>
    <fullName>Customer_Review</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Customer Review</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved Dev Manager</value>
    </filters>
    <label>Đánh Giá Từ Khách Hàng</label>
</ListView>