force-app/main/default/objects/Opportunity/listViews/Danh_s_ch_c_h_i_c_feedback_t_Leader.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_c_h_i_c_feedback_t_Leader</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Feedback by Sale Leader</value>
    </filters>
    <label>Danh sách cơ hội có feedback từ Leader</label>
</ListView>