force-app/main/default/objects/Opportunity/listViews/Danh_s_ch_c_h_i_c_n_duy_t_t_i_li_u.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_c_h_i_c_n_duy_t_t_i_li_u</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Responsible_Employee__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Request Dev Manager Review</value>
    </filters>
    <label>Danh sách cơ hội cần duyệt tài liệu</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>