force-app/main/default/objects/Opportunity/listViews/Danh_s_ch_c_h_i_duy_t_t_i_li_u.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_c_h_i_duy_t_t_i_li_u</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved Dev Manager</value>
    </filters>
    <label>Danh sách cơ hội đã duyệt tài liệu</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>