force-app/main/default/objects/Opportunity/listViews/Danh_s_ch_ch_duy_t.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_ch_duy_t</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Responsible_Employee__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Sale Manager Approval</value>
    </filters>
    <label>Danh sách chờ duyệt</label>
</ListView>