force-app/main/default/objects/Opportunity/listViews/Danh_s_ch_ti_p_nh_n.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_ti_p_nh_n</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Sale Manager</value>
    </filters>
    <label>Danh sách đã tiếp nhận</label>
</ListView>