force-app/main/default/objects/Opportunity/listViews/Danh_sa_ch_ch_th_m_i_nh.listView-meta.xml
<ListView>
    <fullName>Danh_sa_ch_ch_th_m_i_nh</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Responsible_Employee__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Sale Leader Review</value>
    </filters>
    <label>Danh sách chờ thẩm định</label>
</ListView>