force-app/main/default/objects/Opportunity/listViews/DevLeaderRejectedList.listView-meta.xml
<ListView>
    <fullName>DevLeaderRejectedList</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Responsible_Employee__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Returned to Dev Manager</value>
    </filters>
    <label>Cơ hội bị Dev Leader từ chối</label>
</ListView>